--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,137 @@
-header h1 {
-margin: 0 auto;
-background-color: #ffffff;
-color: #4aaaa5;
+html {
+    background-color:  #ffffff;
 
 }
 
-nav {
-    color: black;
+/* Header Section */
 
+.header {
+background-color: rgba(0,0,0,.2);
+color: blue;
+width: 100%;
+margin: 0 auto;
+font-family: Arial, Helvetica, sans-serif;
+
+padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.header h1 {
+display: block;
+color: black;
+font-size: 30px;
+font-family: 'Raleway', sans-serif;
+letter-spacing: 2px;
+font-weight: 800;
+float: left;
+padding: auto;
+}
+  
+.header ul{
+    text-align: right;
+}
+
+.header ul li{
+    list-style: none;
+    display: inline-block;
+}
+
+.header ul li a {
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 2px;
+    font-weight: 600;
+    padding: 25px;
+}
+
+.header ul li a:hover{
+    background-color: gray;
 }
 
 #Content {
+    background-color: black;
+    color: whitesmoke;
+    letter-spacing: 3px;
+    line-height: 1.8;
+    word-spacing: 2px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+
     width: 960px;
-    height: 960px;
     margin: 0 auto;
+    
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    
+}
+
+/* Footer section */
+
+footer {
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
 
 }
 
-#Content h1 {
+footer p {
+    text-align: center;
+    color: white;
+   
+}
+
+/* contact form */
+
+
+
+input[type=text], select, textarea {
+
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top:6px;
+    margin-bottom: 16px;
+    font-size: 15px;
+
+}
+
+
+input[type=submit]{
+    background-color: skyblue;
+    color:beige;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 20px;
     
+}
+
+input[type=submit]:hover {
+    background-color: skyblue;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.Contact{
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #f2f2f2;
+    font-family: Arial, Helvetica, sans-serif;
+
+    margin: 0 auto;
+    width: 960px;
     
 
 }
