--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,100 +1,134 @@
-html {
-    background-color:  #ffffff;
 
+
+body {
+    width:100%;
+    margin: auto;
+    background-image: url('../images/criss-cross.png');
 }
 
-.page-container {
-    position: relative;
-    min-height: 100vh;
-    overflow: auto;
+.container {
+    width: 960px;
+    margin: 0 auto;
 }
-
-/* Header Section */
 
 .header {
-background-color: rgba(0,0,0,.2);
-color: blue;
-width: 100%;
-margin: 0 auto;
-font-family: Arial, Helvetica, sans-serif;
+    z-index: 1;
+    background: #ffffff;
+    width: 100%;
+    
+    position: absolute;
+    top:0;
+    left: 0;
+    right:0;
+    border-style: solid;
+    border-color: #cccccc;
 
-padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+    border-width: 2px;
+    border-left-style: hidden;
+    border-right-style: hidden;
+    border-top-style: hidden;
+
 }
 
-.header h1 {
-display: block;
-color: black;
-font-size: 30px;
-font-family: 'Raleway', sans-serif;
-letter-spacing: 2px;
-font-weight: 800;
-float: left;
-padding: auto;
-}
-  
-.header ul{
-    text-align: right;
+.logo {
+    background-color: #4aaaa5;
+    width: 500px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    float: left;
+    text-align: justify;
+    padding-left: 20px;
+    font-size: 200%;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: justify;
 }
 
-.header ul li{
-    list-style: none;
-    display: inline-block;
-}
-
-.header ul li a {
-    display: block;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 2px;
-    font-weight: 600;
-    padding: 25px;
-}
-
-.header ul li a:hover{
-    background-color: gray;
-}
-
-#Content {
-    background-color: black;
+.logo a {
     color: whitesmoke;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+    float: left;
+    margin-left: 10px;
+    padding-left: 11px;
+    padding-top: 12px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
+.nav {
+    float: right;
+}
+
+.nav a {
+    color: gray;
+}
+
+/* Content Section */
+
+.content {
+    background-color: #ffffff;
+    width: 920px;
+    margin: 0 auto;
+
+    margin-top: 120px;
+    
+    border-style: solid;
+    border-color: #dddddd;
+
+    border-width: 2px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.heading {
+    color: #4aaaa5;
+    border-style: solid;
+    border-color: #cccccc;
+
+    border-width: 2px;
+    border-left-style: hidden;
+    border-right-style: hidden;
+    border-top-style: hidden;
+}
+
+.profile
+{
+    margin-top: 20px;
+}
+
+img {
+    margin-right:20px;
+    float: left;
+}
+
+ p {
     letter-spacing: 3px;
     line-height: 1.8;
     word-spacing: 2px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-
-    width: 960px;
-    margin: 0 auto;
-    
-    padding-top: 10px;
-    padding-bottom: 2.5 rem;
-    padding-right: 10px;
-    padding-left: 10px;
-    
+    font-family: 'Times New Roman', Times, serif;
 }
-
 /* Footer section */
 
 .footer {
-
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
-    background-color: gray;
+    background-color: #666666;
     border-top: 3px solid #4aaaa5;
 
 }
 
 .footer p {
     text-align: center;
-    color: white;
-   
+    color: white; 
 }
 
 /* Contact form */
@@ -116,7 +150,7 @@ input[type=text], select, textarea {
 
 
 input[type=submit]{
-    background-color: skyblue;
+    background-color: #4aaaa5;
     color:beige;
     padding: 12px 20px;
     border: none;
@@ -135,13 +169,26 @@ input[type=submit]:hover {
 #Contact {
     border-radius: 5px;
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
 
     margin: 0 auto;
     width: 960px;
+    margin-top: 120px;
 }
 
+#con_head {
+    color: #4aaaa5;
+    border-style: solid;
+    border-color: #cccccc;
+
+    border-width: 2px;
+    border-left-style: hidden;
+    border-right-style: hidden;
+    border-top-style: hidden;
+
+    padding-bottom: 10px;
+}
 /* Portfolio pages */
 
 #Portfolio {
