--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,45 +194,149 @@ input[type=submit]:hover {
 }
 /* Portfolio pages */
 
-#Portfolio {
-
+.Portfolio {
     background-color: #ffffff;
+    width: 920px;
     margin: 0 auto;
-    width: 960px;
+    position: relative;
 
-    border-radius: 5px;
-    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 50px;
+    
+    border-style: solid;
+    border-color: #dddddd;
 
+    border-width: 2px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+
+    overflow: auto;
+}
+
+.port {
+    color: #4aaaa5;
+    border-style: solid;
+    border-color: #cccccc;
+
+    border-width: 2px;
+    border-left-style: hidden;
+    border-right-style: hidden;
+    border-top-style: hidden;
 }
 
 .container_img  img{
-    display: block;
     float:left;
     margin: 0 auto;
     padding: 20px;
     width: 230px;
-    height: 230px;
+    height: 230px; 
+    position: relative;
     
 }
 
-.container_img #Books{
+.container h1 {
+    float:left;
+    position:relative;
+    padding: 20px;
+}
+
+.Books{
     clear:left;
 }
 
-.container_img #Kernel{
+.Books h1{
+    clear:left;
+}
+
+.Kernel{
     clear: left;
 }
 
-.text-wrapper{
-    width: 100%;
-    position: relative;
-    margin-top: -40%;
+.Kernel h1{
+    clear: left;
 }
 
-.text-wrapper h2{
-    text-align: center;
-    color: black;
-    font-size: 10vw;
-    font-family: 'Times New Roman', Times, serif;
+.clear {
+    clear: both;
+}
 
+.Music {
+    margin:0;
+    padding:0;
+}
+
+.text_m h1{
+    position: absolute;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+
+    background: #4aaaa5;
+    opacity: 0.7;
+    width:210px;
+
+    margin-top: 200px;
+    padding-left: 20px;
+    margin-left: 20px;
+}
+
+.text_e h1{
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    color: white;
+
+    background: #4aaaa5;
+    opacity: 0.7;
+    width:230px;
+
+    margin-top: 200px;
+    right: 250px;
+    
+}
+
+.text_b h1{
+    position: absolute;
+    text-align: center;
+    color: white;
+
+    background: #4aaaa5;
+    opacity: 0.7;
+    width:210px;
+
+    margin-top: 200px;
+    padding-left: 20px;
+    margin-left: 20px;
+}
+
+.text_p h1{
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    color: white;
+
+    background: #4aaaa5;
+    opacity: 0.7;
+    width:230px;
+
+    margin-top: 200px;
+    right: 250px;
+
+}
+
+.text_k h1{
+    
+    position: absolute;
+    text-align: center;
+    color: white;
+
+    background: #4aaaa5;
+    opacity: 0.7;
+
+    margin-top: 200px;
+    width:210px;
+    padding-left: 20px;
+    margin-left: 20px;
+   
 }
