--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,11 @@ li {
 
     padding-left: 20px;
     padding-right: 20px;
+}
 
+.content img{
+    width:250px;
+    height:250px;
 }
 
 .heading {
@@ -134,11 +138,7 @@ img {
 }
 
 /* Contact form */
-
-
-
 input[type=text], select, textarea {
-
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -147,7 +147,6 @@ input[type=text], select, textarea {
     margin-top:6px;
     margin-bottom: 16px;
     font-size: 15px;
-
 }
 
 
@@ -158,14 +157,12 @@ input[type=submit]{
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 20px;
-    
+    font-size: 20px;   
 }
 
 input[type=submit]:hover {
     background-color: skyblue;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: Arial, Helvetica, sans-serif;   
 }
 
 #Contact {
@@ -284,6 +281,7 @@ input[type=submit]:hover {
 .text_e h1{
     display: inline-block;
     position: relative;
+
     text-align: center;
     color: white;
 
